--- a/ST10256859_PROG7311_POE/appsettings.json
+++ b/ST10256859_PROG7311_POE/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\\POE_DB.mdf;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
