--- a/ST10256859_PROG7311_POE/ST10256859_PROG7311_POE.csproj
+++ b/ST10256859_PROG7311_POE/ST10256859_PROG7311_POE.csproj
@@ -8,13 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="App_Data\POE_DB.mdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
