--- a/ST10256859_PROG7311_POE/appsettings.json
+++ b/ST10256859_PROG7311_POE/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\\POE_DB.mdf;Integrated Security=True"
+    "DefaultConnection": "Data Source=POE_DB.db"
   },
   "Logging": {
     "LogLevel": {
